# trelvy-ai-backend

./: .gitignore  README.md  database.py  main.py  pyproject.toml  requirements.txt  schema.py  scheme.py  test_docker.py  vercel.json
include/: coordination.py  memory.py  sandbox.py
prisma/: schema.prisma
prisma/migrations/20260627125740_init_schema/: migration.sql
prisma/migrations/20260627195558_add_sessions/: migration.sql
prisma/migrations/20260629203231_done/: migration.sql
router/: agent.py  commentedUserAuth.py  userAuth.py
runtime/: agentLoader.py  auth.py  email.py
