[project]
name = "trelvy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.1",
    "fastapi-mail>=1.6.5",
    "openai-codex>=0.1.0b2",
    "passlib[bcrypt]>=1.7.4",
    "prisma>=0.15.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
]

[tool.uv]
constraint-dependencies = [
    "openai-codex-cli-bin ; sys_platform != 'linux'",
]