[project]
name = "trelvy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.138.1",
    "fastapi-mail>=1.6.5",
    "openai>=2.44.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "prisma>=0.15.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "redis>=8.0.1",
    "starlette>=1.3.1",
    "qdrant-client",
    "docker>=7.1.0",
]

